RetailDevGit/src/objects/ARM_Brand_Image__c.object
<CustomObject>
    <description>Appirio Retail Management (ARM) Object</description>
    <fields>
        <fullName>Image_Type__c</fullName>
        <inlineHelpText>Maximum Recommended Size (w*h) for:
Banner - 520px * 200px
Logo - 635px * 150px
Mobile Banner Logo - 200px * 150px  
Mobile Logo -  200px * 140px</inlineHelpText>
        <label>Image Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Logo</fullName>
                </value>
                <value>
                    <fullName>Mobile Logo</fullName>
                </value>
                <value>
                    <fullName>Mobile Banner Logo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>define that this image is active to be used by the side for parent brand</description>
        <inlineHelpText>If unchecked, the attached image will not be used in the site</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Function__c</fullName>
        <label>Retail Function</label>
        <referenceTo>ARM_Retail_Function__c</referenceTo>
        <relationshipLabel>Brand Images</relationshipLabel>
        <relationshipName>Brand_Images</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Brand Image</label>
    <nameField>
        <displayFormat>BI-{0000}</displayFormat>
        <label>Brand Images Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>